--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -22,8 +22,8 @@
                 Para explorar la funcionalidad completa y probar los endpoints, por favor utiliza los siguientes enlaces a nuestra documentación interactiva:
             </p>
             <div class="documentation-links">
-                <a href="/docs" class="btn btn-primary">Documentación Interactiva (Swagger UI)</a>
-                <a href="/redoc" class="btn btn-secondary">Documentación Detallada (ReDoc)</a>
+                <a href="/api/docs" class="btn btn-primary">Documentación Interactiva (Swagger UI)</a>
+                <a href="/api/redoc" class="btn btn-secondary">Documentación Detallada (ReDoc)</a>
             </div>
         </main>
         <footer class="card-footer">
